@@ -2,8 +2,9 @@ partman-lvm (64) UNRELEASED; urgency=low
 
   [ Jérémy Bobbio ]
   * Add missing source of debconf/confmodule in init.d/lvm-devices.
+  * Reset partman-lvm/device_remove_lvm after asking in device_remove_lvm().
 
- -- Jérémy Bobbio <lunar@debian.org>  Wed, 20 Aug 2008 21:52:59 +0000
+ -- Jérémy Bobbio <lunar@debian.org>  Thu, 21 Aug 2008 21:35:28 +0200
 
 partman-lvm (63) unstable; urgency=low
 
